# many-rs

./: .bazelrc  BUILD.bazel  Cargo.toml  WORKSPACE.bazel  cargo-bazel-lock.json
.github/workflows/: release.yml
docker/: Makefile.ledger  docker-compose-kvstore.jsonnet  docker-compose-ledger.jsonnet
scripts/: run.sh
src/many/: Cargo.toml
src/many-abci/: BUILD.bazel  Cargo.toml
src/many-abci/src/: module.rs
src/many-cli/: Cargo.toml
src/many-client/: Cargo.toml
src/many-client/src/client/: blocking.rs
src/many-identity/: Cargo.toml
src/many-identity-dsa/: Cargo.toml
src/many-identity-hsm/: Cargo.toml
src/many-identity-webauthn/: Cargo.toml
src/many-kvstore/: BUILD.bazel  Cargo.toml
src/many-ledger/: BUILD.bazel  Cargo.toml
src/many-macros/: Cargo.toml
src/many-migration/src/: lib.rs
src/many-migration/tests/: migrations.rs
src/many-mock/: Cargo.toml
src/many-modules/: Cargo.toml
src/many-protocol/: Cargo.toml
src/many-server/: Cargo.toml
src/many-server-cache/: Cargo.toml
src/many-server/src/: server.rs
src/many-server/src/transport/: http.rs
src/many/src/: message.rs  server.rs
src/many/src/message/: error.rs
src/omni/: Cargo.toml
src/omni/src/types/: identity.rs
tests/resiliency/ledger/: no_mempool_cache.bats
