platform(
    name = "docker_image_platform",
    constraint_values = [
        "@bazel_tools//platforms:x86_64",
        "@bazel_tools//platforms:linux",
    ],
    exec_properties = {
        "OSFamily": "Linux",
        "container-image": "docker://index.docker.io/lifted/ll-build@sha256:2ccbe6b4ac6acc720a05254c2ac3bf2f0907c411d42215e868c526a3af25787c",
    },
)