[package]
name = "many-macros"
version = "0.1.0"
edition = "2021"
authors = ["The Lifted Initiative"]
license = "Apache-2.0"
description = "Rust implementation of the MANY protocol."
readme = "README.md"
homepage = "https://theliftedinitiative.org/"
repository = "https://github.com/the-lifted-initiative/many-rs"
keywords = ["web3", "blockchain", "tendermint", "proto", "crypto", "the-lifted-initiative"]
categories = ["network-programming"]

[lib]
proc-macro = true

[dependencies]
inflections = "1.1.1"
proc-macro2 = "1.0.36"
quote = "1.0.14"
serde = "1.0.134"
serde_tokenstream = "0.1.3"
syn = "1.0.86"

